fix: replace Java 17+ APIs with Java 8 compatible alternatives
Replace HexFormat (Java 17) with manual hex encoding and Set.of()
(Java 9) with Collections.unmodifiableSet to fix CI compilation on
Java 11.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>